--- a/_posts/ctf/overthewire/2022-01-29-bandit.md
+++ b/_posts/ctf/overthewire/2022-01-29-bandit.md
@@ -1,94 +1,93 @@
 ---
 layout: post
 title: 'OverTheWire | Bandit'
-date: 2022-01-29
 permalink: /other/overthewire/bandit/
 ---
 
-# [](#header-4)Level 1
-{% highlight plain %}
+# Level 1
+{% highlight bash %}
 ❯ ssh bandit0@bandit.labs.overthewire.org -p 2220
-$ cat readme
+> cat readme
 boJ9jbbUNNfktd78OOpsqOltutMc3MY1
 {% endhighlight %}
 
-# [](#header-4)Level 2
-{% highlight plain %}
+# Level 2
+{% highlight bash %}
 ❯ ssh bandit1@bandit.labs.overthewire.org -p 2220
-$ cat ./-
+> cat ./-
 CV1DtqXWVFXTvM2F0k09SHz0YwRINYA9
 {% endhighlight %}
 
-# [](#header-4)Level 3
-{% highlight plain %}
+# Level 3
+{% highlight bash %}
 ❯ ssh bandit2@bandit.labs.overthewire.org -p 2220
-$ cat spaces\ in\ this\ filename
+> cat spaces\ in\ this\ filename
 UmHadQclWmgdLOKQ3YNgjWxGoRMb5luK
 {% endhighlight %}
 
-# [](#header-4)Level 4
-{% highlight plain %}
+# Level 4
+{% highlight bash %}
 ❯ ssh bandit3@bandit.labs.overthewire.org -p 2220
-$ cat inhere/.hidden
+> cat inhere/.hidden
 pIwrPrtPN36QITSp3EQaw936yaFoFgAB
 {% endhighlight %}
 
-# [](#header-4)Level 5
-{% highlight plain %}
+# Level 5
+{% highlight bash %}
 ❯ ssh bandit4@bandit.labs.overthewire.org -p 2220
-$ cat inhere/-file07
+> cat inhere/-file07
 koReBOKuIDDepwhWk7jZC0RTdopnAYKh
 {% endhighlight %}
 
-# [](#header-4)Level 6
-{% highlight plain %}
+# Level 6
+{% highlight bash %}
 ❯ ssh bandit5@bandit.labs.overthewire.org -p 2220
-$ ls -alR | grep 1033
-$ find . -type f -name ".file2" -size 1033c
-$ cd maybehere07
-$ cat .file2
+> ls -alR | grep 1033
+> find . -type f -name ".file2" -size 1033c
+> cd maybehere07
+> cat .file2
 DXjZPULLxYr17uwoI01bNLQbtFemEgo7
 {% endhighlight %}
 
-# [](#header-4)Level 7
-{% highlight plain %}
+# Level 7
+{% highlight bash %}
 ❯ ssh bandit6@bandit.labs.overthewire.org -p 2220
-$ find / -type f -size 33c -user bandit7 -group bandit6
-$ cat /var/lib/dpkg/info/bandit7.password 
+> find / -type f -size 33c -user bandit7 -group bandit6
+> cat /var/lib/dpkg/info/bandit7.password 
 HKBPTKQnIay4Fw76bEy8PVxKEDQRKTzs
 {% endhighlight %}
 
-# [](#header-4)Level 8
-{% highlight plain %}
+# Level 8
+{% highlight bash %}
 ❯ ssh bandit7@bandit.labs.overthewire.org -p 2220
-$ cat data.txt | grep millionth
+> cat data.txt | grep millionth
 cvX2JJa4CFALtqS87jk27qwqGhBM9plV
 {% endhighlight %}
 
-# [](#header-4)Level 9
-{% highlight plain %}
+# Level 9
+{% highlight bash %}
 ❯ ssh bandit8@bandit.labs.overthewire.org -p 2220
-$ cat data.txt | sort | uniq -u
+> cat data.txt | sort | uniq -u
 UsvVyFSfZZWbi6wgC7dAFyFuR6jQQUhR
 {% endhighlight %}
 
-# [](#header-4)Level 10
-{% highlight plain %}
+# Level 10
+{% highlight bash %}
 ❯ ssh bandit9@bandit.labs.overthewire.org -p 2220
-$ strings data.txt | grep =
+> strings data.txt | grep =
 truKLdjsbJ5g7yyJ2X2R0o3a5HQJFuLk
 {% endhighlight %}
 
-# [](#header-4)Level 11
-{% highlight plain %}
+# Level 11
+{% highlight bash %}
 ❯ ssh bandit10@bandit.labs.overthewire.org -p 2220
-$ base64 -d data.txt
+> base64 -d data.txt
 IFukwKGsFW8MOq3IRFqrxE1hxTNEbUPR
 {% endhighlight %}
 
-# [](#header-4)Level 12
-{% highlight plain %}
+# Level 12
+{% highlight bash %}
 ❯ ssh bandit11@bandit.labs.overthewire.org -p 2220
-$ cat data.txt | tr 'A-Za-z' 'N-ZA-Mn-za-m'
+> cat data.txt | tr 'A-Za-z' 'N-ZA-Mn-za-m'
 5Te8Y4drgCRfCx8ugdwuEX8KFC6k2EUu
 {% endhighlight %}
