--- a/_posts/ctf/rootme/cryptanalysis/2022-04-10-very_easy.md
+++ b/_posts/ctf/rootme/cryptanalysis/2022-04-10-very_easy.md
@@ -1,22 +1,21 @@
 ---
 layout: post
 title: 'Root Me | Cryptanalysis - Very Easy'
-date: 2022-04-10
 permalink: /rootme/cryptanalysis/very-easy/
 ---
 
-# [](#header-4)Encoding ASCII
+# Encoding ASCII
 Copy the text and decode from Hex.
 
-# [](#header-4)Encoding UU
+# Encoding UU
 Copy the text and decode from UU.
 
-# [](#header-4)Hash - Message Digest 5
+# Hash - Message Digest 5
 We can use **john** to crack the hash.
-{% highlight plain %}
+{% highlight bash %}
 > john password.txt --format=RAW-MD5
 {% endhighlight %}
 
-# [](#header-4)Hash - SHA-2
+# Hash - SHA-2
 We just need to search the hash and get **4dM1n**.
 With icyberchef We can encoded it to SHA1.
