--- a/_posts/ctf/rootme/web-client/2022-04-11-easy.md
+++ b/_posts/ctf/rootme/web-client/2022-04-11-easy.md
@@ -1,14 +1,13 @@
 ---
 layout: post
 title: 'Root Me | Web - Client - Easy'
-date: 2022-04-11
 permalink: /rootme/web-client/easy/
 ---
 
-# [](#header-4)Javascript - Native code
+# Javascript - Native code
 Decrypt the code with JSfuck.
 
-# [](#header-4)Javascript - Webpack
+# Javascript - Webpack
 Components...
 
 
