--- a/_posts/ctf/rootme/web-client/2022-04-11-medium.md
+++ b/_posts/ctf/rootme/web-client/2022-04-11-medium.md
@@ -1,9 +1,8 @@
 ---
 layout: post
 title: 'Root Me | Web - Client - Medium'
-date: 2022-04-11
 permalink: /rootme/web-client/medium/
 ---
 
-# [](#header-4)Javascript - Obfuscation 3
+# Javascript - Obfuscation 3
 Decode the string from hex and from decimal.
