--- a/_posts/ctf/htb/starting-point/2022-03-06-Oopsie.md
+++ b/_posts/ctf/htb/starting-point/2022-03-06-Oopsie.md
@@ -22,30 +22,27 @@ Nmap done: 1 IP address (1 host up) scanned in 7.95 seconds
 {% endhighlight %}
 
 If we search the ip in the Firefox we can access to a webpage:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_3.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_3.jpg" weight="100%" />
 
-Now we can set Firefox to listen to **Burp Suite**:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_4.jpg" weight="100%" />
-
-In the Burp Suite app we can see there is a login:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_5.jpg" weight="100%" />
+Now we can crawl the page with **ZAP**, we will find a login page:
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_4.jpg" weight="100%" />
 
 # Foothold
 
 Now we have access to the login page:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_6.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_6.jpg" weight="100%" />
 
 We can see we need super admin privilages to get access to the super admin account:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_7.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_7.jpg" weight="100%" />
 
 We can see the **id=2**.:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_8.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_8.jpg" weight="100%" />
 
 If we change to 1:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_9.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_9.jpg" weight="100%" />
 
 Now we can use those credentials to change the cookies:
-<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/htb/starting-point/img/Screenshot_10.jpg" weight="100%" />
+<img src="https://raw.githubusercontent.com/zeropio/zeropio.github.io/main/_posts/ctf/htb/starting-point/img/Screenshot_10.jpg" weight="100%" />
 
 We will upload a reverse shell in php and use gobuster to find where it is uploaded:
 {% highlight bash %}
@@ -100,6 +97,10 @@ uid=1000(robert) gid=1000(robert) groups=1000(robert),1001(bugtracker)
 
 We can now search for the bugtracker group:
 {% highlight bash %}
-robert@oopsie:/$ find / -group bugtracker
+robert@oopsie:/$ find / -group bugtracker 2>/dev/null
 /usr/bin/bugtracker
 {% endhighlight %}
+
+We can see that **bugtracker** is using cat. If we create a file name **cat** inside **/tmp**, replace the content by **/bin/sh** and change the PATH to **/tmp** and execute bugtracker, we get a shell with root.
+
+##### I need to remove the file cat after getting access to root, so I can make a cat to the flags.
