--- a/_posts/ctf/tryhackme/pickle_rick/2022-05-09-fuzzer.md
+++ b/_posts/ctf/tryhackme/pickle_rick/2022-05-09-fuzzer.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 'TryHackMe | Pickle Rick'
-permalink: /thm/pickle-rick/
+permalink: /ctf/thm/pickle-rick/
 ---
 
 # Enumeration
