--- a/_posts/notes/vulnerabilities/2021-12-12-sqli.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-sqli.md
@@ -2,9 +2,9 @@
 title: Notes | SQLi
 author: Zeropio
 date: 2021-12-12
-categories: [Notes, Databases]
+categories: [Notes, Vulnerabilities]
 tags: [sql, injection]
-permalink: /notes/databases/sqli 
+permalink: /notes/vulnerabilities/sqli 
 ---
 
 
