--- a/_posts/notes/vulnerabilities/2021-12-12-xss.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-xss.md
@@ -2,9 +2,9 @@
 title: Notes | XSS
 author: Zeropio
 date: 2021-12-12
-categories: [Notes, Web]
+categories: [Notes, Vulnerabilities]
 tags: [xss]
-permalink: /notes/web/xss
+permalink: /notes/vulnerabilities/xss
 ---
 
 
