--- a/_posts/notes/vulnerabilities/2022-04-23-lfi.md
+++ b/_posts/notes/vulnerabilities/2022-04-23-lfi.md
@@ -2,9 +2,9 @@
 title: Notes | LFI
 author: Zeropio
 date: 2022-04-23
-categories: [Notes, Web]
+categories: [Notes, Vulnerabilities]
 tags: [lfi]
-permalink: /notes/web/lfi
+permalink: /notes/vulnerabilities/lfi
 ---
 
 
