--- a/_posts/notes/vulnerabilities/2022-04-24-csrf-ssrf.md
+++ b/_posts/notes/vulnerabilities/2022-04-24-csrf-ssrf.md
@@ -2,9 +2,9 @@
 title: Notes | CSRF and SSRF
 author: Zeropio
 date: 2022-04-24
-categories: [Notes, Web]
+categories: [Notes, Vulnerabilities]
 tags: [csrf, ssrf]
-permalink: /notes/web/csrf-ssrf
+permalink: /notes/vulnerabilities/csrf-ssrf
 ---
 
 
