--- a/_posts/notes/vulnerabilities/2022-04-25-others.md
+++ b/_posts/notes/vulnerabilities/2022-04-25-others.md
@@ -2,9 +2,9 @@
 title: Notes | Others
 author: Zeropio
 date: 2022-04-25
-categories: [Notes, Web]
-tags: []
-permalink: /notes/web/others
+categories: [Notes, Vulnerabilities]
+tags: [shellshock, axfr, deserialization, idor]
+permalink: /notes/vulnerabilities/others
 ---
 
 
