--- a/_posts/notes/vulnerabilities/2022-04-25-poa.md
+++ b/_posts/notes/vulnerabilities/2022-04-25-poa.md
@@ -2,9 +2,9 @@
 title: Notes | POA
 author: Zeropio
 date: 2022-04-25
-categories: [Notes, Web]
-tags: []
-permalink: /notes/web/poa
+categories: [Notes, Vulnerabilities]
+tags: [padbuster]
+permalink: /notes/vulnerabilities/poa
 ---
 
 
