--- a/_posts/notes/vulnerabilities/2022-04-25-xxe.md
+++ b/_posts/notes/vulnerabilities/2022-04-25-xxe.md
@@ -2,9 +2,9 @@
 title: Notes | XXE
 author: Zeropio
 date: 2022-04-25
-categories: [Notes, Web]
+categories: [Notes, Vulnerabilities]
 tags: [xxe]
-permalink: /notes/web/xxe
+permalink: /notes/vulnerabilities/xxe
 ---
 
 
