--- a/_posts/notes/vulnerabilities/2021-12-12-xss.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-xss.md
@@ -10,6 +10,14 @@ permalink: /notes/vulnerabilities/xss
 
 # General
 
+There are three main types of XSS:
+| **Type**   | **Description**    |
+|--------------- | --------------- |
+| *Reflected*   | Occurs when user input is displayed on the page after processing   |
+| *Stored*   | Occurs when user input is stored in the back end database and then displayed upon retrieval   |
+| *DOM*   | Occurs when user input is directly shown in the browser and is written to an HTML DOM object  |
+
+
 If we have a form we can try to insert code, like this:
 ```html
 <script> ... </script>
@@ -17,12 +25,17 @@ If we have a form we can try to insert code, like this:
 If the page execute what are in the form we can make several damage to the page.
 
 There are some examples:
+- Redirection. 
+
 ```html
 <script> window.location="" </script>
 ```
-This will send the target to a different page (phishing).
 
-Also, if we use **deface** we can send a visitor to another part of the webpage. This can break the whole page.
+- Alert for cookie
+
+```javascript
+#"><img src=/ onerror=alert(document.cookie)>
+```
 
 # Blind XSS
 We can use XSS to a cookie hijacking. First we need to start an http server, we can do it with python...:
