--- a/_posts/notes/vulnerabilities/2021-12-12-sqli.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-sqli.md
@@ -310,7 +310,7 @@ Another way is to add a comment at the end of our input, in order to remove ever
 | **Database name**   | **Comment**    |
 |--------------- | --------------- |
 | Oracle   | `--`   |
-| MySQL | `#` |
+| MySQL | `/* */` `--` |
 | MariaDB | `/* */` `#` |
 | Others comments | `/*` `//` `%23` |
 
@@ -536,7 +536,7 @@ SELECT sql_grants FROM information_schema.sql_show_grants
 'something' UNION SELECT 1, grantee, privilege_type, 4 FROM information_schema.user_privileges-- 
 ```
 
-> Add `WHERE user="<user"` whenever is necessary
+> Add `WHERE user="<user>"` whenever is necessary
 {: .prompt-tip}
 
 ### LOAD\_FILE
