--- a/_posts/notes/vulnerabilities/2022-04-24-csrf.md
+++ b/_posts/notes/vulnerabilities/2022-04-24-csrf.md
@@ -1,12 +1,11 @@
 ---
-title: Notes | CSRF and SSRF
+title: Notes | CSRF
 author: Zeropio
 date: 2022-04-24
 categories: [Notes, Vulnerabilities]
-tags: [csrf, ssrf]
-permalink: /notes/vulnerabilities/csrf-ssrf
+tags: [csrf]
+permalink: /notes/vulnerabilities/csrf
 ---
-
 
 # Cross Site Request Forgery
 **CSRF** is an attack that forces an end user to execute unwanted actions on a web application in which they're currently authenticated.
@@ -27,10 +26,3 @@ We can create a file similar to:
 ```
 This will change the password from the user who enter this page.
 
----
-
-# SSRF
-In a **SSRF** the attacker can abuse functionality on the server to read or update internal resources.
-
-First we need to find a place were the webpage is printing a file from the server. If we can manipulate that data we can enumarete the machine.
-We can do a fuzzer to list the ports, for example, with Burp.
