Update and rename 2022-11-07-README.md to 2022-11-07-404CTF.md

--- a/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
+++ b/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
@@ -1,3 +1,13 @@
+---
+title: CTFs | 404CTF
+author: BatBato
+date: 2022-08-25
+categories: [CTFs, 404CTF]
+tags: []
+permalink: /CTFs/404CTF/ReadMe
+---
+
+
 # 404CTF_2022
 
 J'ai participé au 404CTF et suis arrivé 378/2460. Vous trouverez ici la plupart des challenges que j'ai pu résoudre.</br></br>
