--- a/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
+++ b/_posts/CTFs/404_CTF/2022-11-07-404CTF.md
@@ -10,16 +10,25 @@ permalink: /CTFs/404CTF/ReadMe
 
 # 404CTF_2022
 
-J'ai participé au 404CTF et suis arrivé 378/2460. Vous trouverez ici la plupart des challenges que j'ai pu résoudre.</br></br>
+J'ai participé au 404CTF et suis arrivé 378/2460. Vous trouverez ici la plupart des challenges que j'ai pu résoudre.
 
-Divers :</br>
-https://github.com/Nouman404/404CTF_2022/tree/main/Divers/Je%20suis%20une%20th%C3%A9i%C3%A8re </br></br>
 
-Renseignement en sources ouvertes :</br>
-https://github.com/Nouman404/404CTF_2022/tree/main/Renseignement%20en%20sources%20ouvertes</br></br>
+Divers :
 
-Stéganographie :</br>
-https://github.com/Nouman404/404CTF_2022/tree/main/Stegano</br></br>
+https://nouman404.github.io/CTFs/404CTF/Divers/Je%20suis%20une%20th%C3%A9i%C3%A8re 
 
-Web :</br>
-https://github.com/Nouman404/404CTF_2022/tree/main/Web/</br></br>
+
+Renseignement en sources ouvertes :
+
+https://nouman404.github.io/CTFs/404CTF/Renseignement%20en%20sources%20ouvertes
+
+
+Stéganographie :
+
+https://nouman404.github.io/CTFs/404CTF/Stegano
+
+
+Web :
+
+https://nouman404.github.io/CTFs/404CTF/Web/
+
